--- a/src/main/webapp/secrets.xhtml
+++ b/src/main/webapp/secrets.xhtml
@@ -31,8 +31,8 @@
                 <h1 class="mt-6 text-2xl font-bold text-white sm:text-3xl md:text-4xl">Secrets</h1>
                 <span class="font-bold text-gray-400 sm:text-xl md:text-xl">Private key to Edit/Delete your Event</span>
                 <div class="col-span-6 sm:col-span-4 my-1 mt-4 ">
-                    <h:outputLabel for="id" value="Private ID:" class="text-xs font-bold text-gray-400 sm:text-xl md:text-xl" />
-                    <h:outputText value="#{reservationBean.info.id_private}" id="id" class="block max-w-xs text-gray-300 text-sm font-bold mb-2" />
+                    <h:outputLabel for="id" value="Private ID:" class="block text-gray-300  text-sm font-bold mb-2" />
+                    <h:inputText value="#{reservationBean.info.id_private}" id="id" class="border-gray-200 text-sm placeholder-gray-500 shadow-sm border-gray-700 bg-gray-800 text-white outline-none appearance-none border border-transparent rounded w-full p-2  text-white leading-normal appearance-none focus:outline-none  focus:bg-gray-800 focus:border-gray-300 focus:border-gray-500 focus:text-white" />
                 </div>
             </div>
         </div>
