--- a/src/main/webapp/addRoom.xhtml
+++ b/src/main/webapp/addRoom.xhtml
@@ -1,11 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
-<f:view>
-    <h:outputLabel value="Hello, world"/>
-</f:view>
+<!--
+  Created by IntelliJ IDEA.
+  User: lukaswigger
+  Date: 14.05.23
+  Time: 14:47
+-->
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core">
+
+<h:head>
+    <link rel="stylesheet" href="css/tail-wind.css" />
+    <link rel="stylesheet" href="css/tailwind.css" />
+    <title>Add Room - Doodle</title>
+</h:head>
+
+<h:body class="bg-gray-900">
+    <div class="lg:grid lg:min-h-screen lg:grid-cols-12">
+        <div class="relative block h-16 lg:order-last lg:col-span-5 lg:h-full xl:col-span-3">
+            <img alt="Benedict-Classroom" src="img/bene.png" class="absolute inset-0 h-full w-full object-cover"/>
+        </div>
+        <div class="px-8 py-8 sm:px-12 lg:col-span-7 lg:py-12 lg:px-16 xl:col-span-9">
+            <div class="max-w-xl lg:max-w-4xl">
+                <h:link outcome="index" class="block text-blue-600">← Back</h:link>
+                <h1 class="mt-6 text-2xl font-bold text-white sm:text-3xl md:text-4xl">Add Room</h1>
+                <h:form class="max-w-xl">
+                    <div class="col-span-6 sm:col-span-4 my-1 mt-4">
+                        <h:outputLabel for="name" value="Room: " class="block text-gray-300  text-sm font-bold mb-2" />
+                        <h:inputText id="name" value="#{reservationBean.info.roomName}" class="border-gray-200 text-sm placeholder-gray-500 shadow-sm border-gray-700 bg-gray-800 text-white outline-none appearance-none border border-transparent rounded w-full p-2  text-white leading-normal appearance-none focus:outline-none  focus:bg-gray-800 focus:border-gray-300 focus:border-gray-500 focus:text-white"/>
+                    </div>
+                    <h:commandButton value="Submit" id="submit" action="#{reservationBean.submitRoom()}" class="my-4 inline-block shrink-0 h-12 rounded-md border border-blue-600 bg-blue-600 px-12 py-3 text-sm font-medium text-white transition hover:bg-transparent focus:outline-none focus:ring active:text-blue-500 hover:bg-blue-700 hover:text-white" />
+                </h:form>
+            </div>
+        </div>
+    </div>
+</h:body>
+
 </html>
