--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -24,8 +24,14 @@
                     <div class="flex items-center">
                         <h:form class="flex items-center">
                             <div class="relative flex mr-3 w-96">
-                                <h:inputText value="#{reservationBean.info.search}" id="simple-search" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" />
-                                <h:commandLink value="Search" action="#{reservationBean.edit(reservationBean.info.search)}" class="ml-40 p-2.5 ml-2 text-sm font-medium text-white bg-blue-700 rounded-lg border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 absolute right-0 top-0 bottom-0" />
+                                <h:inputText value="#{reservationBean.info.searchPublic}" id="simple-search_pubk" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" />
+                                <h:commandLink value="Search" action="#{reservationBean.viewPublic(reservationBean.info.searchPublic)}" class="ml-40 p-2.5 ml-2 text-sm font-medium text-white bg-blue-700 rounded-lg border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 absolute right-0 top-0 bottom-0" />
+                            </div>
+                        </h:form>
+                        <h:form class="flex items-center">
+                            <div class="relative flex mr-3 w-96">
+                                <h:inputText value="#{reservationBean.info.searchPrivate}" id="simple-search_privk" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" />
+                                <h:commandLink value="Search" action="#{reservationBean.editPrivate(reservationBean.info.searchPrivate)}" class="ml-40 p-2.5 ml-2 text-sm font-medium text-white bg-blue-700 rounded-lg border border-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 absolute right-0 top-0 bottom-0" />
                             </div>
                         </h:form>
                         <div class="inline-block">
@@ -44,7 +50,6 @@
                 <th scope="col" class="px-6 py-3">Room:</th>
                 <th scope="col" class="px-6 py-3">Participant:</th>
                 <th scope="col" class="px-6 py-3">Comment:</th>
-                <th scope="col" class="px-6 py-3">View:</th>
             </tr>
             </thead>
             <tbody>
@@ -68,11 +73,6 @@
                         </td>
                         <td class="px-6 py-4 whitespace-nowrap">
                             <div class="text-sm text-white">#{reservation.comment != null ? reservation.comment : 'No comment available'}</div>
-                        </td>
-                        <td class="px-6 py-4 whitespace-nowrap">
-                            <h:link value="View reservation" outcome="view.xhtml" class="active:text-blue-500 w-52 items-end text-blue-600" style="width: 215px;">
-                                <f:param name="id" value="#{reservation.id_public != null ? reservation.id_public : ''}" />
-                            </h:link>
                         </td>
                     </tr>
                 </ui:repeat>
