--- a/src/main/webapp/add.xhtml
+++ b/src/main/webapp/add.xhtml
@@ -7,7 +7,7 @@
 -->
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core" xmlns:p="http://primefaces.org/ui">
 
 <h:head>
    <link rel="stylesheet" href="css/tail-wind.css" />
@@ -39,14 +39,14 @@
                </div>
                <div class="col-span-6 sm:col-span-4 my-1">
                   <h:outputLabel for="room" value="Room: " class="block text-gray-300  text-sm font-bold mb-2" />
-                  <h:selectOneListbox id="room" value="#{reservationBean.info.room}" converter="roomConverter" class="border-gray-200 text-sm placeholder-gray-500 shadow-sm border-gray-700 bg-gray-800 text-white outline-none appearance-none border border-transparent rounded w-full p-2  text-white leading-normal appearance-none focus:outline-none  focus:bg-gray-800 focus:border-gray-300 focus:border-gray-500 focus:text-white">
-                     <f:selectItems value="#{reservationBean.allRooms}" />
+                  <h:selectOneListbox id="room" value="#{infoBean.info.room}" converter="roomConverter" class="border-gray-200 text-sm placeholder-gray-500 shadow-sm border-gray-700 bg-gray-800 text-white outline-none appearance-none border border-transparent rounded w-full p-2  text-white leading-normal appearance-none focus:outline-none  focus:bg-gray-800 focus:border-gray-300 focus:border-gray-500 focus:text-white">
+                     <f:selectItems value="#{infoBean.allRooms}" />
                   </h:selectOneListbox>
                </div>
                <div class="col-span-6 sm:col-span-4 my-1">
                   <h:outputLabel for="participants" value="Participants: " class="block text-gray-300  text-sm font-bold mb-2" />
-                  <h:selectManyListbox id="participants" value="#{reservationBean.info.participants}" class="border-gray-200 text-sm placeholder-gray-500 shadow-sm border-gray-700 bg-gray-800 text-white outline-none appearance-none border border-transparent rounded w-full p-2  text-white leading-normal appearance-none focus:outline-none  focus:bg-gray-800 focus:border-gray-300 focus:border-gray-500 focus:text-white">
-                     <f:selectItems value="#{reservationBean.allParticipants}" />
+                  <h:selectManyListbox id="participants" value="#{infoBean.info.participants}" class="border-gray-200 text-sm placeholder-gray-500 shadow-sm border-gray-700 bg-gray-800 text-white outline-none appearance-none border border-transparent rounded w-full p-2  text-white leading-normal appearance-none focus:outline-none  focus:bg-gray-800 focus:border-gray-300 focus:border-gray-500 focus:text-white">
+                     <f:selectItems value="#{infoBean.allParticipants}" />
                   </h:selectManyListbox>
                </div>
                <div class="col-span-6 sm:col-span-4 my-1 my-2">
