--- a/src/main/webapp/view.xhtml
+++ b/src/main/webapp/view.xhtml
@@ -5,9 +5,15 @@
   Date: 14.05.23
   Time: 14:47
 -->
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html
+        PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core" xmlns:c="http://java.sun.com/jstl/core">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:fn="http://xmlns.jcp.org/jsp/jstl/functions"
+      xmlns:c="http://java.sun.com/jstl/core"
+>
 
 <h:head>
     <link rel="stylesheet" href="css/tail-wind.css" />
@@ -26,37 +32,28 @@
                 <h1 class="mt-6 text-2xl font-bold text-white sm:text-3xl md:text-4xl">View Reservation</h1>
                 <h:form class="max-w-xl">
                     <div class="col-span-6 sm:col-span-4 my-1 mt-4">
-                        <h:outputLabel for="date" value="Date:" class="block text-gray-300 text-sm font-bold mb-2" />
-                        <h:inputText value="#{reservationBean.info.date}" id="date" class="border-gray-200 text-sm placeholder-gray-500 shadow-sm border-gray-700 bg-gray-800 text-white outline-none appearance-none border border-transparent rounded w-full p-2  text-white leading-normal appearance-none focus:outline-none  focus:bg-gray-800 focus:border-gray-300 focus:border-gray-500 focus:text-white" aria-placeholder="date"  />
+                        <h:outputText value="Date: #{reservationBean.info.date != null ? reservationBean.info.date : 'No date defined'}" class="block text-gray-300 text-sm font-bold mb-2" />
                     </div>
                     <div class="col-span-6 sm:col-span-4 my-1">
-                        <h:outputLabel for="from" value="From:" class="block text-gray-300 text-sm font-bold mb-2" />
-                        <h:inputText value="#{reservationBean.info.from}" id="from" class="border-gray-200 text-sm placeholder-gray-500 shadow-sm border-gray-700 bg-gray-800 text-white outline-none appearance-none border border-transparent rounded w-full p-2  text-white leading-normal appearance-none focus:outline-none  focus:bg-gray-800 focus:border-gray-300 focus:border-gray-500 focus:text-white" aria-placeholder="from"/>
+                        <h:outputText value="From: #{reservationBean.info.from != null ? reservationBean.info.from : 'No from defined'}" class="block text-gray-300 text-sm font-bold mb-2" />
                     </div>
                     <div class="col-span-6 sm:col-span-4 my-1">
-                        <h:outputLabel for="to" value="To:" class="block text-gray-300 text-sm font-bold mb-2" />
-                        <h:inputText value="#{reservationBean.info.to}" id="to" class="border-gray-200 text-sm placeholder-gray-500 shadow-sm border-gray-700 bg-gray-800 text-white outline-none appearance-none border border-transparent rounded w-full p-2  text-white leading-normal appearance-none focus:outline-none  focus:bg-gray-800 focus:border-gray-300 focus:border-gray-500 focus:text-white" aria-placeholder="to" />
+                        <h:outputText value="To: #{reservationBean.info.to != null ? reservationBean.info.to : 'No to defined'}" class="block text-gray-300 text-sm font-bold mb-2" />
                     </div>
                     <div class="col-span-6 sm:col-span-4 my-1">
-                        <h:outputLabel for="room" value="Room:" class="block text-gray-300 text-sm font-bold mb-2" />
-                        <h:selectOneListbox id="room" value="#{reservationBean.info.room}" converter="roomConverter" class="border-gray-200 text-sm placeholder-gray-500 shadow-sm border-gray-700 bg-gray-800 text-white outline-none appearance-none border border-transparent rounded w-full p-2  text-white leading-normal appearance-none focus:outline-none  focus:bg-gray-800 focus:border-gray-300 focus:border-gray-500 focus:text-white">
-                            <f:selectItems value="#{reservationBean.allRooms}" />
-                        </h:selectOneListbox>
+                        <h:outputText value="Room: #{reservationBean.info.room != null ? reservationBean.info.room : 'No rooms defined'}" class="block text-gray-300 text-sm font-bold mb-2" />
                     </div>
                     <div class="col-span-6 sm:col-span-4 my-1">
-                        <h:outputLabel for="participants" value="Participants: " class="block text-gray-300  text-sm font-bold mb-2" />
-                        <h:selectManyListbox id="participants" value="#{reservationBean.info.participants}" class="border-gray-200 text-sm placeholder-gray-500 shadow-sm border-gray-700 bg-gray-800 text-white outline-none appearance-none border border-transparent rounded w-full p-2  text-white leading-normal appearance-none focus:outline-none  focus:bg-gray-800 focus:border-gray-300 focus:border-gray-500 focus:text-white">
-                            <f:selectItems value="#{reservationBean.allParticipants}" />
-                        </h:selectManyListbox>
+                        <h:outputText value="Participants: #{reservationBean.info.participants != null ? fn:substring(reservationBean.info.participants.toString(), 1, fn:length(reservationBean.info.participants.toString()) - 1) : 'No participants defined'}" class="block text-gray-300 text-sm font-bold mb-2" />
                     </div>
                     <div class="col-span-6 sm:col-span-4 my-1 my-2">
-                        <h:outputLabel for="comment" value="Comment:" class="block text-gray-300 text-sm font-bold mb-2" />
-                        <h:inputTextarea value="#{reservationBean.info.comment}" id="comment" class="border-gray-200 text-sm placeholder-gray-500 shadow-sm border-gray-700 bg-gray-800 text-white outline-none appearance-none border border-transparent rounded w-full p-2  text-white leading-normal appearance-none focus:outline-none  focus:bg-gray-800 focus:border-gray-300 focus:border-gray-500 focus:text-white"  aria-placeholder="comment"/>
+                        <h:outputText value="Comment: #{reservationBean.info.comment != null ? reservationBean.info.comment : 'No comment available'}" class="block text-gray-300 text-sm font-bold mb-2" />
                     </div>
                 </h:form>
             </div>
         </div>
     </div>
+
 </h:body>
 
 </html>
